[package]
name = "phase-3-workspace-tests"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# Phase-3 R3-A landed this workspace-level test package as the holding
# pen for cross-cutting Phase-3 architectural pins + compromise-closure
# pins that don't fit naturally inside any single crate's test
# directory. Mirrors the Phase-2a `tests/doc_completeness` precedent.
#
# Files hosted here:
#
# - `architecture_md_state.rs` — pins ARCHITECTURE.md narrative state
#   (in-flight callouts at G14-A1 + G16-A intermediate states; final
#   10-crate transition lands at G20-B). R3-A authors the G14-A1
#   intermediate-state assertion; R3-C extends with G16-A; R3-E
#   authors the G20-B FINAL pin.
#
# - `security_posture_compromises.rs` — pins SECURITY-POSTURE.md
#   compromise-table state. R3-A owns Compromise #12 (G13-E flip);
#   R3-B owns #17 #18 #21 #2 #10; R3-C owns #11; R3-D owns #16 #19 #20;
#   R3-E owns the G20-B FINAL `security_posture_phase_3_close_compromise_table_present`
#   pin.
#
# - `doc_drift_invariant_coverage.rs` (R3-C) — pins
#   INVARIANT-COVERAGE.md retense post-G15-A (Algorithm B
#   generalization drops the canonical-only fallback note).
#
# - `doc_drift_security_posture.rs` (R3-C) — pins SECURITY-POSTURE.md
#   forward-pointer resolution post-G15-B (drift-detector landing
#   resolves the Phase-2b "drift-detector lands at Phase 3 G15-B"
#   forward-pointer).

[lib]
path = "src/lib.rs"
doctest = false
bench = false

[[test]]
name = "architecture_md_state"
path = "architecture_md_state.rs"

[[test]]
name = "security_posture_compromises"
path = "security_posture_compromises.rs"

[[test]]
name = "doc_drift_invariant_coverage"
path = "doc_drift_invariant_coverage.rs"

[[test]]
name = "doc_drift_security_posture"
path = "doc_drift_security_posture.rs"

[[test]]
# R3-C end-to-end: two-peer atrium bidirectional sync (exit-criterion 1).
name = "atrium_two_peer"
path = "atrium_two_peer.rs"

[[test]]
# R3-C end-to-end: three-peer Loro convergence under concurrent writes
# (exit-criterion 15 / C-10).
name = "atrium_three_peer"
path = "atrium_three_peer.rs"

[[test]]
# R3-C end-to-end: two-process atrium bidirectional sync (scope-real-22).
name = "atrium_two_process"
path = "atrium_two_process.rs"

[[test]]
# R3-C end-to-end: two-device same-identity selective zone sync
# (exit-criterion 16; multi-device under shared identity).
name = "atrium_two_device"
path = "atrium_two_device.rs"

[dependencies]

[lints]
workspace = true
