[package]
name = "benten-admin-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Phase-4-Foundation R6-FP-E benten-admin-shell integrator binary — the production Tauri 2.x command-invoke wiring that closes r6-r1-browser-runtime br-r6-r1-3 (no production caller for TauriRenderer + InProcessSessionBridge). Lives at tools/benten-admin-shell/ alongside the other internal-only tool crates (benten-dev, cite-drift-detector, bench-wat-rebake)."
publish = false

[lints]
workspace = true

# Phase-4-Foundation R6-FP-E (G24-E follow-up; path-a-FULL ratified by Ben
# 2026-05-13 on Q-R6-3). The integrator binary is deliberately segregated
# from `benten-renderer-tauri` so the renderer crate stays Tauri-runtime-
# agnostic per br-r1-9 + arch-r1-16 (preserves the `tauri-runtime-verso`
# swap-readiness). This crate is THE place that names the Tauri 2.x
# runtime dependency.
#
# **Path-a-FULL framing (2026-05-13):** br-r6-r1-3 named two halves:
#   (i)   integrator-binary scaffold + IPC dispatch pipeline E2E pin
#   (ii)  webview-driven tauri-driver smoke test exercising
#         `WebviewWindowBuilder::with_csp()` semantics + actual Tauri
#         command-payload handling under a real WebView2 / WebKit2GTK /
#         WKWebView runtime.
#
# BOTH halves land in this PR. Half (i) at the default-mode build path
# (no extra deps). Half (ii) at the `tauri` cargo feature: when the
# feature is on, the full Tauri 2.x dep tree is pulled in (~533
# transitive crates), the bin compiles to a real Tauri application, and
# `tests/e2e_webview_smoke.rs` drives a `tauri-driver` WebDriver session
# against the running binary.
#
# **Why an opt-in feature instead of always-on?** Workspace builds (the
# default `cargo build` / `cargo test` / `cargo check --workspace` run
# by every IMPLEMENTER agent at scoped pre-flight + every CI lane on
# every PR) would otherwise pull the ~533 transitive Tauri crates + the
# `webkit2gtk-4.1` runtime dep on linux. That cost is unacceptable
# against the dispatch-conventions §3 cap=7 parallelism budget (per-
# agent RAM peak budget is ~500MB; Tauri's 533-crate compile burns
# ~3-4GB cold) AND against the §3.5h pre-push gate (60-90s warm).
#
# The `tauri` feature is the OPT-IN seam that:
#   - The dedicated `admin-shell-e2e.yml` CI workflow flips ON every
#     run + runs the webview-driven E2E.
#   - Developers locally testing the embedded webview flip ON via
#     `cargo build --release -p benten-admin-shell --features tauri`.
#   - Agents NEVER flip ON during scoped pre-flight.
#
# This matches the workspace pattern for other heavy backends (see
# `benten-engine`'s `browser-backend` feature for shape (b) similarly
# guarded). The feature-gating is NOT a scope-reduction: half (ii) lands
# end-to-end under CI; the gate exists for build-cost isolation.
#
# **macOS WebDriver caveat (cross-platform note):** Tauri's own
# tauri-driver project documents WebDriver support on linux (via
# WebKitWebDriver) + Windows (via Microsoft Edge WebDriver), NOT macOS
# (Apple's WebKit on macOS does not ship a WebDriver-compatible binding
# for embedded WKWebView). The CI matrix consequently runs the
# webview-driven E2E on `ubuntu-latest` only + a build-only smoke on
# `macos-latest` (asserts the binary compiles + boots without panic).
# Per the dispatch brief's "acceptable scope-reduction" clause, this is
# a Tauri-project-level platform limitation — not a benten-engine
# scope reduction; tracked at https://v2.tauri.app/develop/tests/webdriver/
# Windows is deferred per the brief.

[lib]
path = "src/lib.rs"
bench = false

[[bin]]
name = "benten-admin-shell"
path = "src/main.rs"

[features]
default = []
# When enabled, links the real Tauri 2.x runtime into the binary so the
# webview is loaded for real + the `e2e_webview_smoke` test is
# compiled. See Cargo.toml header for the full opt-in rationale +
# macOS caveat. CI lane `admin-shell-e2e.yml` flips this ON every run.
tauri = ["dep:tauri", "dep:tauri-build"]

[dependencies]
benten-core = { path = "../../crates/benten-core" }
benten-errors = { workspace = true }
benten-engine = { path = "../../crates/benten-engine" }
benten-platform-foundation = { path = "../../crates/benten-platform-foundation" }
benten-renderer-tauri = { path = "../../crates/benten-renderer-tauri" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Tauri 2.x runtime. Optional → enabled by the `tauri` feature. ~533
# transitive crates on enable. See Cargo.toml header for rationale.
# `default-features = false` to avoid pulling the bundler dep stack;
# we only need the runtime + command-invoke surface.
tauri = { version = "2", optional = true, default-features = false, features = ["wry"] }

[build-dependencies]
# Tauri 2.x build-script hook. Generates the codegen-context the
# `tauri::generate_context!()` macro consumes. Optional → only fires
# when the `tauri` feature is on.
tauri-build = { version = "2", optional = true, default-features = false }

[dev-dependencies]
benten-core = { path = "../../crates/benten-core" }
benten-errors = { workspace = true }
benten-engine = { path = "../../crates/benten-engine" }
benten-platform-foundation = { path = "../../crates/benten-platform-foundation" }
benten-renderer-tauri = { path = "../../crates/benten-renderer-tauri" }
serde_json = { workspace = true }
# WebDriver client for the e2e_webview_smoke test. Pinned to the
# stable 0.x line; the test is feature-gated so this dep is only pulled
# at `--features tauri` test builds.
#
# `default-features = false` + `features = ["rustls-tls"]` per
# `deny.toml` banning openssl/openssl-sys (fantoccini's default
# `native-tls` feature transitively pulls openssl). Rustls is the
# workspace TLS standard.
fantoccini = { version = "0.22", default-features = false, features = ["rustls-tls"] }
# rustls 0.23+ requires the dev-test to explicitly install a
# `CryptoProvider` since fantoccini's `rustls-tls` feature is
# crypto-backend-agnostic. We use `ring` (already in the workspace
# transitive dep graph) per its long-stable shape vs `aws-lc-rs` which
# pulls additional C dependencies.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "net"] }
