[package]
name = "benten-dev"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Benten dev-server (Phase-2a G11-A): hot-reload of handler subgraphs, cap-grant preservation across reload, inspect-state pretty-printer for suspended ExecutionStateEnvelopes."
publish = false

[lints]
workspace = true

[lib]
path = "src/lib.rs"
bench = false

[[bin]]
name = "benten-dev"
path = "src/main.rs"

[dependencies]
benten-core = { path = "../../crates/benten-core" }
benten-errors = { workspace = true }
benten-eval = { path = "../../crates/benten-eval" }
# G12-B (Phase 2b): devserver routes registrations through Engine::register_subgraph
# rather than the in-memory HandlerTable. The benten-dsl-compiler dep brings
# the DSL-text → Subgraph compiler that the watcher pipeline feeds into the
# engine. ReloadCoordinator + CallGuard remain owned here for concurrency
# coordination (storage moves to Engine; coordination stays).
benten-engine = { path = "../../crates/benten-engine" }
benten-dsl-compiler = { path = "../../crates/benten-dsl-compiler" }
blake3 = { workspace = true, features = ["pure"] }

[dev-dependencies]
tempfile = { workspace = true }
